[metadata]
name = lightkde
version = attr: lightkde.__version__
author = Arpad Rozsas
author_email = rozsasarpi@gmail.com
description = Lightning fast, lightweight, and reliable kernel density estimation.
long_description = file: README.md
url = https://github.com/rozsasarpi/lightkde
classifiers =
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Operating System :: OS Independent
license_files = LICENSE

[options]
python_requires = >= 3.6
packages = find:
install_requires =
    numpy<2
    scipy<2

[options.extras_require]
tests =
    matplotlib<4
    pytest
    coverage[toml]

lint_type_checks =
    pre-commit
    black
    isort
    mypy
    flake8
    flake8-tidy-imports
    flake8-import-order

docs =
    sphinx >=3, <4
    sphinx_gallery<1
    sphinx-copybutton<1
    sphinx-inline-tabs
    sphinxcontrib-bibtex<3
    myst-parser<1
    furo
